--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Alpha</h2>
-					<p>Another fine responsive site template freebie by HTML5 UP.</p>
+					<h2>안녕하세요</h2>
+					<p>여러분의 시간, 노력을 아껴드립니다.</p>
 					<ul class="actions">
 						<li><a href="#" class="button special">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
